# schroot

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  HACKING.md  NEWS.md  README.md  TODO.md  config.h.cmake
cmake/: BoostChecks.cmake  RegexChecks.cmake
doc/: schroot-bin.dox.cmake  schroot.dox.cmake
etc/: CMakeLists.txt  schroot.conf
etc/bash_completion/: schroot
etc/pam/: CMakeLists.txt  schroot-freebsd
etc/profile-templates/all/all/: copyfiles
etc/profile-templates/all/freebsd/: fstab
etc/profile-templates/buildd/all/: copyfiles
etc/profile-templates/buildd/freebsd/: fstab
etc/profile-templates/default/freebsd/: fstab
etc/profile-templates/desktop/freebsd/: fstab
etc/profile-templates/sbuild/freebsd/: fstab
etc/setup.d/: 00check  10mount  15killprocs  20copyfiles  20nssdatabases  70services  CMakeLists.txt
lib/schroot/: CMakeLists.txt  config.h.cmake  environment.cc  format-detail.cc  keyfile-reader.cc  keyfile.cc  lock.cc  regex.h  run-parts.cc  run-parts.h  schroot.pc.cmake  session.cc
lib/schroot/auth/: auth.cc  pam-conv-tty.cc  pam-conv-tty.h  pam.cc
lib/schroot/chroot/: chroot.cc  chroot.h  config.cc
lib/schroot/chroot/facet/: btrfs-snapshot.cc  custom.cc  directory.cc  directory.h  facet.cc  facet.h  file.cc  fsunion.cc  mountable.h  session-clonable.cc  storage.cc  storage.h
lib/test/: CMakeLists.txt
libexec/listmounts/: main.cc  main.h
libexec/mount/: main.cc
man/: CMakeLists.txt  config.man.cmake  schroot-faq.7.man  schroot-setup.5.man  schroot.1.man  schroot.conf.5.man
man/examples/: conf-chroots.man  schroot-info.man  schroot-session-chrootinfo.man  schroot-session-sessioninfo.man
man/po/: de.po  fr.po  schroot-man.pot
po/: POTFILES.in
sbuild/: sbuild-chroot-facet-mountable.cc  sbuild-chroot.cc  sbuild-environment.cc
scripts/: ci-build  travis-build
test/: CMakeLists.txt  sbuild-environment.cc  sbuild-util.cc
test/bin-common/: CMakeLists.txt
test/schroot/: CMakeLists.txt  environment.cc  util.cc
test/schroot/chroot/: CMakeLists.txt  btrfs-snapshot.cc  chroot.cc  custom.cc  directory.cc  file.cc
